# query-bier

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  run_conversion.py  test_streaming.py  test_threshold.py
src/: analyze_false_positive.py  config.py  convert_false_positives.py  eval.py  eval_filtered.py  main.py  models.py  prompt.py  prompt_score.py  utils.py
src/llm/: gemini_client.py  openrouter_client.py
src/rate_limit/: token_bucket.py
src/web_ui/: README.md  app.js  evaluate_model.py  index.html  job_manager.py  server.py  threshold_tuning.py
